# celerity-hla

./: .gitignore  CMakeLists.txt  README.md  build_hipsycl_info.txt  ideas.md
cmake/: celerity_std-config.cmake.in
examples/basic/: CMakeLists.txt  sequences.cpp
examples/convolution/: CMakeLists.txt  convolution.cc
examples/convolution_orig/: CMakeLists.txt  convolution_orig.cc
examples/matmul/: CMakeLists.txt  matmul.cc
examples/matmul_orig/: CMakeLists.txt  matmul.cc
examples/simple/: CMakeLists.txt  simple.cc
examples/simple_actions/: CMakeLists.txt  simple_actions.cc
examples/wave_sim/: CMakeLists.txt  wave_sim.cc
include/: accessor_iterator.h  accessor_proxy.h  accessor_traits.h  accessor_type.h  accessors.h  actions.h  algorithm.h  any_accessor.h  buffer_range.h  buffer_traits.h  celerity_accessor_traits.h  celerity_helper.h  computation_type.h  computation_type_traits.h  depth_first.h  fusion.h  fusion_helper.h  fusion_traits.h  item_context.h  iterator.h  iterator_transform.h  kernel_traits.h  linkage.h  linkage_traits.h  master_task.h  packaged_task_traits.h  partially_packaged_task.h  platform.h  policy.h  policy_traits.h  require.h  sequence.h  sequence_traits.h  sequencing.h  subrange.h  sycl.h  t_joint.h  task.h  transient.h  transient_traits.h  (+1 more)
include/algorithms/: accumulate.h  copy.h  fill.h  for_each.h  generate.h  transform.h
include/experimental/: accessor_iterator.h  accessor_proxies.h  accessor_traits.h  all.h  block.h  concepts.h  function_traits.h  inactive_probe.h  kernel_traits.h  probing.h  slice.h  traits.h  transform.h
include/experimental/algorithms/: fill.h  generate.h  transform.h  zip.h
include/experimental/packaged_tasks/: packaged_generate.h  packaged_transform.h  packaged_zip.h
include/packaged_tasks/: packaged_generate.h  packaged_transform.h  packaged_zip.h
include/sycl/: range.hpp  vec.hpp
include/sycl/detail/: small_array.hpp
src/: accessor_iterator.h  accessor_proxy.h  accessor_traits.h  accessor_type.h  accessors.h  actions.h  algorithm.h  any_accessor.h  buffer_traits.h  celerity.h  celerity_accessor_traits.h  celerity_helper.h  computation_type.h  computation_type_traits.h  decorated_task.h  decoration.h  decorator_traits.h  fusion.h  fusion_helper.h  fusion_traits.h  inplace_function.h  item_context.h  iterator.h  kernel.h  kernel_sequence.h  kernel_traits.h  linkage.h  linkage_traits.h  master_task.h  packaged_task.h  packaged_task_traits.h  partially_packaged_task.h  placeholder.h  policy.h  policy_traits.h  scoped_sequence.h  sequence.h  sequence_traits.h  sequencing.h  static_iterator.h  (+7 more)
src/algorithms/: accumulate.h  copy.h  fill.h  for_each.h  generate.h  transform.h
src/decorators/: generate_decorator.h  transform_decorator.h  zip_decorator.h
src/packaged_tasks/: packaged_generate.h  packaged_transform.h  packaged_zip.h
src/sycl/: id.hpp  item.hpp  range.hpp
src/sycl/detail/: linear_id.hpp  vec.hpp
tests/: CMakeLists.txt  accessors.cpp  accessors_experimental.cpp  algorithms.cpp  algorithms_experimental.cpp  fusion.cpp  fusion_disabling.cpp  fusion_experimental.cpp  index_utils.cpp  minimal.cpp  minimal_experimental.cpp  sequencing.cpp  subranges.cpp  subranges_experimental.cpp  traits.cpp  utils.h
